[gd_scene load_steps=20 format=2]

[ext_resource path="res://Cossos/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cossos/Terra.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cossos/Death.tscn" type="PackedScene" id=3]
[ext_resource path="res://Imatges/Free/Terrain/Terra.png" type="Texture" id=4]
[ext_resource path="res://Imatges/Free/Background/Pink.png" type="Texture" id=5]
[ext_resource path="res://Border.tscn" type="PackedScene" id=6]
[ext_resource path="res://Imatges/Free/Terrain/Frame edge.png" type="Texture" id=7]
[ext_resource path="res://Escenes/Pantalla_Cossos.gd" type="Script" id=8]
[ext_resource path="res://Imatges/american_captain/American Captain.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Imatges/Free/Traps/Arrow/arrow.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512.5, 20 )

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/Frame.png-969495df17b8d7c3c93751bcb6a80b18.stex"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.75, 1627.25 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 36.875, 1439 )

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/Frame.png-969495df17b8d7c3c93751bcb6a80b18.stex"

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.1875, 484.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 12.875, 97 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 44.5, 87.5 )

[node name="Pantalla_Cossos" type="Node2D"]
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -3305.0
margin_right = 1023.0
margin_bottom = 237.0
texture = ExtResource( 5 )
stretch_mode = 2

[node name="Terra1" parent="." instance=ExtResource( 2 )]
position = Vector2( 456, -707 )

[node name="Terra2" parent="." instance=ExtResource( 2 )]
position = Vector2( 639, -265 )

[node name="Terra3" parent="." instance=ExtResource( 2 )]
position = Vector2( 21, -401 )

[node name="Terra4" parent="." instance=ExtResource( 2 )]
position = Vector2( 669, -886 )

[node name="Terra5" parent="." instance=ExtResource( 2 )]
position = Vector2( 18, -1181 )

[node name="Terra6" parent="." instance=ExtResource( 2 )]
position = Vector2( 676, -1887 )

[node name="Terra10" parent="." instance=ExtResource( 2 )]
position = Vector2( 679, -2527 )

[node name="Terra13" parent="." instance=ExtResource( 2 )]
position = Vector2( 21, -2802 )

[node name="Terra14" parent="." instance=ExtResource( 2 )]
position = Vector2( 219, -2909 )

[node name="Terra15" parent="." instance=ExtResource( 2 )]
position = Vector2( 664, -2917.5 )

[node name="Terra11" parent="." instance=ExtResource( 2 )]
position = Vector2( 97, -2249 )

[node name="Terra12" parent="." instance=ExtResource( 2 )]
position = Vector2( 343, -2018 )

[node name="Terra7" parent="." instance=ExtResource( 2 )]
position = Vector2( 27, -1687 )

[node name="Terra8" parent="." instance=ExtResource( 2 )]
position = Vector2( 674, -1501 )

[node name="Terra9" parent="." instance=ExtResource( 2 )]
position = Vector2( 369, -1358 )

[node name="Base Nivell" type="StaticBody2D" parent="."]
position = Vector2( 495, -20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base Nivell"]
position = Vector2( 17.5, 0 )
shape = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Base Nivell"]
margin_left = -495.0
margin_top = -20.0
margin_right = -159.0
margin_bottom = 29.0
rect_scale = Vector2( 3.05, 3.05 )
texture = ExtResource( 4 )
stretch_mode = 2

[node name="Death" parent="." instance=ExtResource( 3 )]
position = Vector2( 5, 827 )
scale = Vector2( 1.2312, 0.882212 )

[node name="Personatge1" parent="." groups=["Jugador"] instance=ExtResource( 1 )]
position = Vector2( 512, -67 )

[node name="Paret1" parent="." instance=ExtResource( 6 )]

[node name="TextureRect2" parent="Paret1" index="0"]
margin_top = -3281.0
margin_bottom = -2200.0
texture = SubResource( 2 )

[node name="CollisionShape2D" parent="Paret1" index="1"]
position = Vector2( 13.75, -1660.5 )
shape = SubResource( 3 )

[node name="Paret2" parent="." instance=ExtResource( 6 )]

[node name="TextureRect2" parent="Paret2" index="0"]
margin_left = 996.0
margin_top = -2917.0
margin_right = 1006.0
margin_bottom = -1957.0
texture = SubResource( 2 )

[node name="CollisionShape2D" parent="Paret2" index="1"]
position = Vector2( 1033.13, -1478 )
shape = SubResource( 7 )

[node name="Paret3" parent="." instance=ExtResource( 6 )]

[node name="TextureRect2" parent="Paret3" index="0"]
margin_left = 998.0
margin_top = -3308.0
margin_right = 1007.0
margin_bottom = -2987.0
rect_rotation = 90.0
rect_scale = Vector2( 3, 3.03 )
texture = SubResource( 4 )

[node name="CollisionShape2D" parent="Paret3" index="1"]
position = Vector2( 511.5, -3294.19 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Paret4" parent="." instance=ExtResource( 6 )]

[node name="TextureRect2" parent="Paret4" index="0"]
margin_left = 997.0
margin_top = -3283.0
margin_right = 1006.0
margin_bottom = -3219.0
texture = SubResource( 2 )

[node name="CollisionShape2D" parent="Paret4" index="1"]
position = Vector2( 1011, -3188 )
shape = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 13, -3294 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1011, -3294 )
rotation = 1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Easy" type="Button" parent="."]
margin_left = 425.0
margin_top = -450.0
margin_right = 600.0
margin_bottom = -375.0
rect_pivot_offset = Vector2( 87, 37 )
custom_fonts/font = SubResource( 6 )
text = "EASY"

[node name="Medium" type="Button" parent="."]
margin_left = 425.0
margin_top = -325.0
margin_right = 600.0
margin_bottom = -250.0
rect_pivot_offset = Vector2( 87, 37 )
custom_fonts/font = SubResource( 6 )
text = "MEDIUM"

[node name="Hard" type="Button" parent="."]
margin_left = 425.0
margin_top = -200.0
margin_right = 600.0
margin_bottom = -125.0
rect_pivot_offset = Vector2( 87, 37 )
custom_fonts/font = SubResource( 6 )
text = "HARD"

[node name="Arrow" type="Sprite" parent="."]
position = Vector2( 912, -2996 )
rotation = 1.5708
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1104, -3005 )
shape = SubResource( 9 )

[connection signal="body_entered" from="Death" to="Personatge1" method="_on_Death_body_entered"]
[connection signal="pressed" from="Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="Hard" to="." method="_on_Hard_pressed"]
[connection signal="body_entered" from="Area2D" to="Personatge1" method="_on_Area2D_body_entered"]

[editable path="Paret1"]
[editable path="Paret2"]
[editable path="Paret3"]
[editable path="Paret4"]
